add flexbox class to body, header & cards container

--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -14,17 +14,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Slackey&family=Spicy+Rice&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="flexbox">
     <header>
         <nav>
-            <div class="logo">
+            <div class="logo flexbox">
                 <img src="images/logo.png" alt="odin face logo" class="logo__img">
                 <h1 class="logo__text">Odin Recipe</h1>
             </div>
         </nav>
     </header>
     <main>
-            <article class="card">
+            <article class="card flexbox">
                 <figure id="burger" class="card__figure">
                     <img src="images/burger.png" alt="Hamburger Buns" class="card__image">
                     <figcaption class="card__caption">Belle's Hamburger Buns</figcaption>
