--- a/index.html
+++ b/index.html
@@ -25,18 +25,24 @@
     </header>
     <main>
             <article class="card flexbox">
-                <figure id="burger" class="card__figure">
-                    <img src="images/burger.png" alt="Hamburger Buns" class="card__image">
-                    <figcaption class="card__caption">Belle's Hamburger Buns</figcaption>
-                </figure>
-                <figure id="pasta" class="card__figure">
-                    <img src="images/pasta.png" alt="awesome pasta salad" class="card__image">
-                    <figcaption class="card__caption">Awesome Pasta Salad</figcaption>
-                </figure>
-                <figure id="lemonade" class="card__figure">
-                    <img src="images/lemonade.png" alt="vintage lemonade" class="card__image">
-                    <figcaption class="card__caption">Vintage Lemonade</figcaption>
-                </figure>
+                <a href="recipes/hamburger.html">
+                    <figure id="burger" class="card__figure">
+                        <img src="images/burger.png" alt="Hamburger Buns" class="card__image">
+                        <figcaption class="card__caption">Belle's Hamburger Buns</figcaption>
+                    </figure>
+                </a>
+                <a href="recipes/pasta.html">
+                    <figure id="pasta" class="card__figure">
+                        <img src="images/pasta.png" alt="awesome pasta salad" class="card__image">
+                        <figcaption class="card__caption">Awesome Pasta Salad</figcaption>
+                    </figure>
+                </a>
+                <a href="recipes/lemonade.html">
+                    <figure id="lemonade" class="card__figure">
+                        <img src="images/lemonade.png" alt="vintage lemonade" class="card__image">
+                        <figcaption class="card__caption">Vintage Lemonade</figcaption>
+                    </figure>
+                </a>
             </article>
     </main>
     <footer>DESIGNED BY<a href=""> SPIRIT</a></footer>
